--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -67,5 +67,29 @@
     "choose-doctor": "Chọn bác sĩ",
     "choose-date": "Chọn ngày",
     "save": "Lưu thông tin"
+  },
+  "patient": {
+    "detail-doctor": {
+      "schedule": "Lịch khám",
+      "no-schedule": "Bác sĩ không có lịch khám trong ngày này, vui lòng chọn ngày khác"
+    },
+    "extra-info-doctor": {
+      "text-address": "Địa chỉ"
+    }
+  },
+  "admin": {
+    "manage-doctor": {
+      "title": "Tạo thêm thông tin Bác Sĩ",
+      "select-doctor": "Chọn Bác Sĩ",
+      "intro": "Thông tin giới thiệu",
+      "add": "Tạo thông tin",
+      "save": "Lưu thông tin",
+      "price": "Giá khám",
+      "payment": "Phương thức thanh toán",
+      "province": "Tỉnh/Thành phố",
+      "nameClinic": "Tên phòng khám",
+      "addressClinic": "Địa chỉ phòng khám",
+      "note": "Ghi chú"
+    }
   }
 }
