--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -72,7 +72,11 @@
   "patient": {
     "detail-doctor": {
       "schedule": "Lịch khám",
-      "no-schedule": "Bác sĩ không có lịch khám trong ngày này, vui lòng chọn ngày khác"
+      "no-schedule": "Bác sĩ không có lịch khám trong ngày này, vui lòng chọn ngày khác",
+      "moreInfo": "Mehr sehen"
+    },
+    "detail-clinic": {
+      "btn-booking": "Termin buchen"
     },
     "extra-info-doctor": {
       "text-address": "Địa chỉ"
@@ -100,7 +104,9 @@
       "province": "Tỉnh/Thành phố",
       "nameClinic": "Tên phòng khám",
       "addressClinic": "Địa chỉ phòng khám",
-      "note": "Ghi chú"
+      "note": "Ghi chú",
+      "specialty": "Chuyên khoa",
+      "select-clinic": "Chọn phòng khám"
     }
   }
 }
